--- a/site.html
+++ b/site.html
@@ -33,7 +33,20 @@
             <div class="rightsection"><img src="devimg.png" ></div>
         </section><hr>
         <section class="secondsection">
-            <h1>Past Experiences</h1>
+            <span class="text-gray">What i have done so far</span>
+            <h1>My work experience</h1>
+            <div class="box">
+                <div class="vertical"><img class="image-top" src="developer.png" alt="web developer image">
+                    <div class="vertical-title">HTML Developer (time .p)</div><div class="vertical-desc">
+                        Node js Developer (time .p) 
+                    </div>
+                </div>
+                <div class="vertical"></div>
+                <div class="vertical"></div>
+                <div class="vertical"></div>
+            </div>
+
+
         </section>
     </main>
     <script src="https://unpkg.com/typed.js@2.1.0/dist/typed.umd.js"></script>
